[gd_scene load_steps=10 format=3 uid="uid://cfms4bi4sivvp"]

[ext_resource type="Texture2D" uid="uid://dw8ew530rlfr" path="res://assets/sprites/glow4.png" id="1_n2fiv"]
[ext_resource type="Script" uid="uid://ooq5ir3wyyfl" path="res://scenes/store_item/store_item.gd" id="1_ompb6"]
[ext_resource type="Texture2D" uid="uid://0poobuecm0un" path="res://assets/sprites/items/Item_White1.png" id="2_gef1n"]
[ext_resource type="Texture2D" uid="uid://cnkiu5jecgwsr" path="res://assets/sprites/coin.png" id="3_gef1n"]
[ext_resource type="FontFile" uid="uid://cmkei0r5t77jr" path="res://assets/font/Lilian.ttf" id="4_3aie4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n2fiv"]
radius = 13.009612

[sub_resource type="Animation" id="Animation_ompb6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3aie4"]
resource_name = "idea"
length = 2.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.283185307179586]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wm64c"]
_data = {
&"RESET": SubResource("Animation_ompb6"),
&"idea": SubResource("Animation_3aie4")
}

[node name="StoreItemBase" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ompb6")
common_glow = Color(1, 1, 1, 1)
rare_glow = Color(0.1824424, 0.6011536, 0, 1)
epic_glow = Color(0.17860496, 0.4101248, 1, 1)

[node name="Glow" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_n2fiv")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_gef1n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("CircleShape2D_n2fiv")

[node name="Price" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(35, 18)
offset_left = -18.0
offset_top = -26.0
offset_right = 18.0
offset_bottom = -8.0
theme_override_constants/separation = 2

[node name="TextureRect" type="TextureRect" parent="Price"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("3_gef1n")
expand_mode = 1
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="Price"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("4_3aie4")
theme_override_font_sizes/font_size = 16
text = "50"
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wm64c")
}
autoplay = "idea"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
